# workshop-python

python-workshop/: README.md  pyproject.toml
python-workshop/python_workshop/: frequency.py
