[tool.poetry]
name = "python-workshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
biopython = "^1.84"
notebook = "^7.2.2"
rise = "^5.7.1"
jupyter-contrib-nbextensions = "^0.7.0"
beautifulsoup4 = "^4.12.3"
fsspec = "^2024.10.0"
openpyxl = "^3.1.5"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
